--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "bugs": {
     "url": "https://github.com/jzenzinger/weather-app/issues"
   },
-  "homepage": "https://github.com/jzenzinger/weather-app",
+  "homepage": "https://jzenzinger.github.io/weather-app/",
   "devDependencies": {
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2"
